Hack sources to get build to work on macOS
Still segfaults on a test image

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,9 @@ else()
   include_directories( ${OPENCL_INCLUDE_DIRS} )
 endif()
 
+include_directories("/opt/local/include/opencv4")
+set(OpenCV_DIR "/opt/local/libexec/opencv4")
+
 #
 
 if(NOT CMAKE_BUILD_TYPE)
